--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,24 @@ spring.jpa.properties.hibernate.validator.apply_to_ddl=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.mvc.view.prefix=/pages/
-spring.mvc.view.suffix: .html
+spring.mvc.view.prefix=/pages/samples/
+spring.mvc.view.suffix=.html
+
+server.error.path=/error
+
+server.tomcat.relaxed-query-chars=<,>,[,\\,],^,`,{,|,},
+
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=F:/deeplogs/uploads
